--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,10 +1,8 @@
-fastapi
-uvicorn[standard]
-pydantic
-numpy
-pandas
-scikit-learn==1.4.2
-joblib
-requests
-fastapi
+fastapi==0.115.2
+uvicorn==0.30.6
+pydantic==2.9.2
+pandas==2.2.3
+numpy==2.1.1
+scikit-learn==1.5.2
+joblib==1.4.2
 
